--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+.finder-app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 h1 {
   color: white;
   font-size: 40px;
@@ -6,4 +12,13 @@ h1 {
   margin-top: 1rem;
   margin-bottom: 0;
   letter-spacing: 0.1rem;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+a:visited {
+  color: white;
 }
