--- a/src/components/UserDetails/UserDetails.css
+++ b/src/components/UserDetails/UserDetails.css
@@ -10,6 +10,7 @@
   flex-direction: column;
   align-items: center;
   max-width: 250px;
+  min-width: 250px;
   width: 100%;
   height: 350px;
   border: 1px solid gray;
