--- a/src/components/UserDetails/UserDetails.css
+++ b/src/components/UserDetails/UserDetails.css
@@ -1,41 +1,69 @@
+#back {
+  width: 150px;
+  margin-top: 1.5rem;
+  padding: 0.6rem;
+  border-style: none;
+  border-radius: 20px;
+  color: white;
+  background-color: teal;
+  font-size: 18px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#back:hover {
+  cursor: pointer;
+}
+
 .user-detail-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 1.5rem;
+  font-size: 18px;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .detail-wrapper {
-  margin-top: 2.5rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 250px;
-  min-width: 250px;
-  width: 100%;
-  height: 350px;
-  border: 1px solid gray;
-  background-color: rgba(0, 0, 128, 0.267);
-  font-family: sans-serif;
+  justify-content: center;
+  gap: 3rem;
 }
 
 .user-detail-image {
-  width: 180px;
-  height: 180px;
-  margin-top: 1.5rem;
-  margin-bottom: 1rem;
-  border: 6px solid rgb(46, 168, 156);
-  border-radius: 50%;
+  width: 350px;
+  height: 350px;
+  border: 4px solid teal;
+}
+
+.details {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
 }
 
 .user-detail-name {
-  margin-top: 1rem;
-  font-size: 18px;
-  letter-spacing: 1px;
+  margin-top: 0.2rem;
+  margin-bottom: 0.5rem;
+  font-size: 2rem;
   color: white;
 }
 
-.user-detail-name > div {
-  display: inline;
-  font-size: 18px;
-  letter-spacing: 2px;
+.user-detail-extra {
+  margin-top: 0.7rem;
+  font-size: 1rem;
+  color: white;
+}
+
+#visit {
+  font-size: 1rem;
+  margin-top: 1.25rem;
+  padding: 0.4rem 1.3rem;
+  border-style: none;
+  border-radius: 20px;
+  color: white;
+  background-color: teal;
+}
+
+span {
+  color: rgb(0, 201, 201);
 }
