--- a/src/components/UserProfile/UserProfile.css
+++ b/src/components/UserProfile/UserProfile.css
@@ -8,7 +8,7 @@
   height: 250px;
   border: 1px solid gray;
   background-color: rgba(0, 0, 128, 0.267);
-  font-family: sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .user-image {
@@ -27,20 +27,19 @@
   text-align: center;
 }
 
-span {
+#view {
+  text-align: center;
   display: block;
   margin: 1rem 1.5rem 0 1.5rem;
-  padding: 0.3rem 1.2rem;
+  padding: 0.4rem 1.5rem;
   border-style: none;
-  border: 1px solid turquoise;
-  background-color: teal;
   border-radius: 5px;
   color: white;
-  box-sizing: border-box;
-  font-size: 15px;
-  text-align: center;
+  background-color: teal;
+  font-size: 13px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-span:hover {
+#view:hover {
   cursor: pointer;
 }
